--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+  <groupId>com.azure.spring</groupId>
+  <artifactId>spring-cloud-azure-starter-keyvault</artifactId>
+</dependency>
 	</dependencies>
 
 	<build>
@@ -54,5 +58,17 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<dependencyManagement>
+  <dependencies>
+    <dependency>
+      <groupId>com.azure.spring</groupId>
+      <artifactId>spring-cloud-azure-dependencies</artifactId>
+      <version>4.6.0</version>
+      <type>pom</type>
+      <scope>import</scope>
+      </dependency>
+  </dependencies>
+</dependencyManagement>
 
 </project>
