--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,22 @@
-name: Java CI with Maven
+name: Java CI with Maven and Local Deployment
 
-on: [push,pull_request]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@master
-    - name: Set up JDK 17
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '17'
     - name: Build with Maven
-      run: mvn package
-    - name: Deploy to Localhost
+      run: mvn clean install -DskipTests
+    - name: Deploy to localhost
       run: java -jar target/cicd.jar
