--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Java CI with Maven and Local Deployment
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@master
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
