--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@master
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '17'
+   -  name: set up JDK 11
+            uses: actions/setup-java@v3
+            with:
+               java-version: '17'
+               distribution: 'temurin'
+              #  cache: gradle
     - name: Build with Maven
       run: mvn clean install -DskipTests
     - name: Deploy to localhost
